--- a/mandelbulber2/formula/ui/transf_abs_sym3.ui
+++ b/mandelbulber2/formula/ui/transf_abs_sym3.ui
@@ -1235,7 +1235,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;abs sym3 based on code by msltoe&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T_absSym3_koch.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
