examples and php scripts

--- a/mandelbulber2/formula/ui/transf_difs_sphere.ui
+++ b/mandelbulber2/formula/ui/transf_difs_sphere.ui
@@ -300,7 +300,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;TransfDifsSphereIteration  fragmentarium code, mdifs by knighty (jan 2012)&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T_DIFS Torus4_sphere.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
