--- a/mandelbulber2/formula/ui/transf_difs_tube.ui
+++ b/mandelbulber2/formula/ui/transf_difs_tube.ui
@@ -1540,7 +1540,7 @@
 &lt;tr&gt;&lt;th&gt;Reference&lt;/th&gt;&lt;td&gt;&lt;a href=&quot;http://www.iquilezles.org/www/articles/distfunctions/distfunctions.htm&quot;&gt;http://www.iquilezles.org/www/articles/distfunctions/distfunctions.htm&lt;br&gt;
 &lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T_DIFS Tube _ Tube.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T_absSym3_tube.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
