--- a/mandelbulber2/formula/ui/transf_difs_octahedron_v2.ui
+++ b/mandelbulber2/formula/ui/transf_difs_octahedron_v2.ui
@@ -1470,7 +1470,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;TransfDIFSOctahedronV2Iteration https://www.shadertoy.com/view/sd2yWW&lt;br&gt;and https://iquilezles.org/articles/distfunctions/&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T-DifsOctahedron2.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T-DifsOctahedron2a.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T-DifsOctahedron2b.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
