--- a/mandelbulber2/formula/ui/transf_rotation_chebyshev.ui
+++ b/mandelbulber2/formula/ui/transf_rotation_chebyshev.ui
@@ -446,7 +446,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;testing log&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/transfRotationChebychev - torusGrid.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T_absSym3_rotCheby_hextGriw2.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/transfRotationChebychev - torusGrid.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
