Implemented brightness and somple count control for nebula fractals

--- a/mandelbulber2/qt/dock_rendering_engine.ui
+++ b/mandelbulber2/qt/dock_rendering_engine.ui
@@ -470,11 +470,86 @@ with image resolution</string>
    <item>
     <widget class="MyGroupBox" name="groupCheck_nebula_mode">
      <property name="title">
-      <string>Flame fractals</string>
+      <string>Nebula fractals</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
      </property>
+     <layout class="QVBoxLayout" name="verticalLayout_5">
+      <property name="spacing">
+       <number>2</number>
+      </property>
+      <property name="leftMargin">
+       <number>2</number>
+      </property>
+      <property name="topMargin">
+       <number>2</number>
+      </property>
+      <property name="rightMargin">
+       <number>2</number>
+      </property>
+      <property name="bottomMargin">
+       <number>2</number>
+      </property>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <property name="spacing">
+         <number>2</number>
+        </property>
+        <item>
+         <widget class="QPushButton" name="pushButton_nebula_auto_brightness_dark">
+          <property name="text">
+           <string>Auto
+dark</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButton_nebula_auto_brightness_medium">
+          <property name="text">
+           <string>Auto
+medium</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButton_nebula_auto_brightness_bright">
+          <property name="text">
+           <string>Auto
+bright</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QGridLayout" name="gridLayout_3">
+        <property name="topMargin">
+         <number>5</number>
+        </property>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label">
+          <property name="text">
+           <string>Brightness</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="MyLineEdit" name="logedit_nebula_brightness"/>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>Number of samples per pixel</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="MyLineEdit" name="logedit_nebula_samples_per_pixel"/>
+        </item>
+       </layout>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
